--- a/1.Routing.md
+++ b/1.Routing.md
@@ -75,18 +75,28 @@ Route::model('city', City::class);
 What is important is handling nested routing and fallbacks. For eg. Consider a case where a Post belongs to a User, and the route is somewhat like `http://app.com/users/1/posts/1`. Now, you need to add to make sure that the post actually belongs to this user. So, you add a check like this.
 
 ```php
-Route::bind('unavailability', function ($value, $route) {
+Route::bind('post', function ($value, $route) {
     if ($user = $route->parameter('user')) {
-        return $user->unavailabilities()->where('id', $value)->firstOrFail();
+        return $user->posts()->where('id', $value)->firstOrFail();
     }
 
-    return Unavailability::where('id', $value)->firstOrFail();
+    return Post::where('id', $value)->firstOrFail();
+});
+```
+
+_Note:_ The route for the above can be defined as
+
+```php
+Route::group(['prefix' => 'users/{user}/posts'], function () {
+    Route::get('{post}', 'PostController@get')->name('api.posts.show.get');
 });
 ```
 
 ## 1.3 Custom Routers (for eg. Admin Router)
 
-### 1.3.1 Without Namespace
+Sometimes, a set of routes need to be defined that point to a completely different part of the application (for eg. admin panel, api version, a forum). To separate out those routes for the application's base router files (`web.php` or `api.php`), custom routers can in really handy.
+
+### 1.3.1 General Approach
 
 Browse to `app/Providers/RouteServiceProvider.php`
 
