--- a/2.Request.md
+++ b/2.Request.md
@@ -1,6 +1,6 @@
 # 2. Request
 
-You can follow either follow the pattern defined by Laravel to handle requests, or use the _MVC pattern_ as defined [here]().
+You can either follow the pattern [_documented by Laravel_](<#2.1.1-Authorization-&-Validation-(Form-Requests)>) to handle requests, or the [_MVC pattern_](<#2.1.2-Authorization-&-Validation-(MVC)>) mentioned below.
 
 _Important_ : Read about [**Request Lifecycle**](https://laravel.com/docs/5.7/lifecycle).
 
@@ -211,7 +211,9 @@ class UserService
     }
 
     /**
-     * Transform Inputs
+     * Transform Inputs - This is required
+     * when you want to transform inputs like
+     * "password" and convert it into a hash string.
      *
      * @param  array  $inputs
      *
@@ -219,8 +221,15 @@ class UserService
      */
     protected function transformInputs(array $inputs)
     {
+        // You can also use array_map()
+        // But it isn't preferred especially
+        // because sometimes you want to unset
+        // some input fields and not return them.
         foreach ($inputs as $key => $input) {
             switch ($key) {
+                case 'password':
+                    // $inputs['key'] = encrypt($input);
+                    break;
                 case 'fieldName':
                     // $inputs[$key] = ....
                     break;
