--- a/3.Response.md
+++ b/3.Response.md
@@ -1,6 +1,10 @@
 # 3. Response
 
+Responses can sometimes be tricky to handle. However, creating [Macros](#3.1-Macros) can help simplify and reduce a lot of repeating code from the controller.
+
 ## 3.1 Macros
+
+Sending a response from the controller should basically be a one liner. Creating macro functions to handle response data and transform it into a defined structure will help create better APIs.
 
 ### 3.1.1 Non-Modular Way (Preferred If Few Macros)
 
