--- a/4.Exceptions.md
+++ b/4.Exceptions.md
@@ -71,7 +71,7 @@ Understanding Handler's `render()` and `report()` method.
 
 It is important to take control over the type of response to be sent for some responses. The default responses sent by Laravel may not fit the client's requirements and situations may arrive when the client may ask for (let's say) a custom page to show when 404 occurs.
 
-This can be done by simply adding this switch case.
+This can be done by simply adding this switch case to the `render()` method in `app/Exceptions/Handler.php`.
 
 ```php
 /**
@@ -100,8 +100,6 @@ protected function render($request, Exception $e)
 2. Create a trait in `app/Traits` called `RestExceptionHandlerTrait.php`
 
    ```php
-   <?php
-
    namespace App\Traits;
 
    use Exception;
@@ -149,8 +147,6 @@ protected function render($request, Exception $e)
 3. Create another trait called `RestTrait.php`
 
    ```php
-   <?php
-
    namespace App\Traits;
 
    use Illuminate\Http\Request;
