--- a/6.Helpers.md
+++ b/6.Helpers.md
@@ -1,5 +1,9 @@
 # 6. Helpers
 
+Helpers are functions that are used for handling a common operation throughout an application. For eg, sorting of an array alphabetically, flattening of an array, creating a string with first letter capital of each word and more. These functions come in really handy through out the application and can help remove redundancy in the code.
+
+**Note:** You must avoid creating helper functions for methods like _transforming request inputs_ since they belong to a service only. If however, the transformation of inputs is common for all services, consider creating a common or base service class and extend it to the services requiring this method.
+
 ## 6.1 Defining
 
 ### 6.1.1 Autoload Using Composer
